--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="shortcut icon" href="favicon.svg" type="html+xml">
-  <title>bikecrat</title>
+  <title>Bikecraft- Bicicleas Elétricas</title>
 </head>
 <body>
-  <header>
-
+  <header class="header-bg">
+    <div class="header">
+      <a href="./"><img src="./uploads/img/bikcraft.svg" alt="bikecraft">
+      </a>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contatos.html">Contatos</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 </body>
 </html>
