--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="shortcut icon" href="favicon.svg" type="html+xml">
   <title>Bikecraft- Bicicleas Elétricas</title>
@@ -22,5 +25,18 @@
       </nav>
     </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
+        <h1>Bicicletas feitas sob medida<span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicicletas.html" class="btn">Escolha a sua</a>
+      </div>
+        <img src="/uploads/img/fotos/img-intro.jpg" alt="Bicicleta elétrica preta">
+      </div>
+
+
+  </main>
 </body>
 </html>
