--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1>Bicicletas feitas sob medida<span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h1 class="texto-grande ">Bicicletas feitas sob medida<span class="cor-p1 span">.</span></h1>
+        <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href="./bicicletas.html" class="btn">Escolha a sua</a>
       </div>
         <img src="/uploads/img/fotos/img-intro.jpg" alt="Bicicleta elétrica preta">
       </div>
-
-
   </main>
+  <h2 class="texto-grande">escolha a sua <span class="cor-p1 span">.</span></h2>
 </body>
 </html>
