--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./"><img src="./uploads/img/bikcraft.svg" alt="bikecraft">
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu font-1m">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contatos.html">Contatos</a></li>
@@ -27,15 +27,41 @@
   </header>
 
   <main class="introducao-bg">
-    <div class="introducao">
+    <div class="introducao container">
       <div class="introducao-conteudo">
-        <h1 class="texto-grande ">Bicicletas feitas sob medida<span class="cor-p1 span">.</span></h1>
-        <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h1 class="font-1-xxl">Bicicletas feitas sob medida<span class="cor-p1 span">.</span></h1>
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href="./bicicletas.html" class="btn">Escolha a sua</a>
       </div>
         <img src="/uploads/img/fotos/img-intro.jpg" alt="Bicicleta elétrica preta">
       </div>
   </main>
-  <h2 class="texto-grande">escolha a sua <span class="cor-p1 span">.</span></h2>
+  <article class="bicicletas-lista">
+    <h2 class="font-1-xxl container">escolha a sua <span class="cor-p1 span">.</span></h2>
+
+    <ul >
+      <li>
+        <a href="./bicicletas/magic.html" class="cor-11" >
+          <img src="./uploads/img/fotos/bikes/magic-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/nimbus.html" class="cor-11" >
+          <img src="./uploads/img/fotos/bikes/nimbus-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/nebula.html" class="cor-11" >
+          <img src="./uploads/img/fotos/bikes/nebula-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999</span>
+        </a>
+      </li>
+    </ul>
+  </article>
 </body>
 </html>
