--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
   </main>
   <article class="bicicletas-lista">
-    <h2 class="font-1-xxl container">escolha a sua <span class="cor-p1 span">.</span></h2>
+    <h2 class="font-1-xxl container">escolha a sua<span class="cor-p1 span">.</span></h2>
 
     <ul >
       <li>
@@ -89,6 +89,19 @@
   </div>
 </article>
 
+<section class="parceiros" aria-label="Nossos Parceiros">
+  <h2 class="font-1-xxl container">nossos parceiros<span class="cor-p1 span">.</span></h2>
+  <ul>
+    <li><img src="/uploads/img/parceiros/caravan.svg" alt="caravan"></li>
+    <li><img src="/uploads/img/parceiros/ranek.svg" alt="ranek"></li>
+    <li><img src="/uploads/img/parceiros/handel.svg" alt="handel"></li>
+    <li><img src="/uploads/img/parceiros/dogs.svg" alt="dogs"></li>
+    <li><img src="/uploads/img/parceiros/lescone.svg" alt="lescone"></li>
+    <li><img src="/uploads/img/parceiros/flexblog.svg" alt="flexblog"></li>
+    <li><img src="/uploads/img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+    <li><img src="/uploads/img/parceiros/surfbot.svg" alt="surfbot"></li>
+  </ul>
+</section>
 
 </body>
 </html>
