--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz@0,18..144;1,18..144&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="shortcut icon" href="favicon.svg" type="html+xml">
   <title>Bikecraft- Bicicleas Elétricas</title>
@@ -102,6 +103,16 @@
     <li><img src="/uploads/img/parceiros/surfbot.svg" alt="surfbot"></li>
   </ul>
 </section>
-
+<section class="depoimento" aria-label="depoimento">
+  <div>
+    <img src="/uploads/img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta">
+  </div>
+   <div class="depoimento-conteudo">
+    <blockquote class="font-1-xl cor-p5"> 
+      <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+    </blockquote>
+    <span class="font-1-m-b cor-p4">Ana Júlia</span>
+   </div>
+</section>
 </body>
 </html>
