--- a/index.html
+++ b/index.html
@@ -143,7 +143,40 @@
       <a href="./orcamento.html" class="btn">Inscreva-se</a>
     </div>
   </div>
-  
 </article>
+
+<footer class="footer-bg">
+  <div class="footer container">
+    <img src="/uploads/img/bikcraft.svg" alt="Bikecraft">
+  <div class="footer-contato">
+    <h3 class="font-2-l-b cor-0">Contato</h3>
+    <ul class="font-2-m cor-5">
+      <li><a href="tel:+552199999999" class="font-2-m cor-5">+55 21 9999-9999</a></li>
+      <li><a href="mailto:contato@bikcraft.com" class="font-2-m cor-5">contato@bikcraft.com</a></li>
+      <li>Rua Ali Perto, 42 - Botafogo</li>
+      <li>Rio de Janeiro - RJ</li>
+    </ul>
+    <div class="footer-redes">
+      <a href="./"> <img src="/uploads/img/icons/redes/instagram.svg" alt="instagram"></a>
+      <a href="./"> <img src="/uploads/img/icons/redes/facebook.svg" alt="facebook"></a>
+      <a href="./"> <img src="/uploads/img/icons/redes/youtube.svg" alt="youtube"></a>
+     </div>
+    </div>
+    <div class="footer-informacoes">
+      <h3 class="font-2-l-b cor-0">Informações</h3>
+      <nav>
+        <ul class="font-1-m cor-5">
+          <li><a href="./bicicletas.html" class="font-1-m cor-5">Bicicletas</a></li>
+          <li><a href="./seguros.html" class="font-1-m cor-5">Seguros</a></li>
+          <li><a href="./contatos.html" class="font-1-m cor-5">Contatos</a></li>
+          <li><a href="./termos.html" class="font-1-m cor-5">Termos e Condições</a></li>
+        </ul>
+      </nav>
+
+    </div>
+    <p class="footer-copy font-2-m cor-6"> Bikcraft © Alguns direitos reservados.</p>
+  </div>
+
+</footer>
 </body>
 </html>
