--- a/termos.html
+++ b/termos.html
@@ -12,7 +12,7 @@
   <link rel="shortcut icon" href="favicon.svg" type="html+xml">
   <title>Termos e Condições | Bikecraft</title>
 </head>
-<body>
+<body id="termos">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img src="./uploads/img/bikcraft.svg" alt="bikecraft">
