Finaliza página de seguros, adiciona seus responsivos

--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -116,6 +116,21 @@
       </li>
     </ul>
   </article>
+
+  <article class="seguro-bg">
+    <div class="seguro container">
+      <div class="seguro-imagem">
+        <img src="../uploads/img/fotos/seguros.jpg" alt="pessoa parada em cima da bike" class="seguro-imagem">
+      </div>
+      <div class="seguro-conteudo">
+        <h2 class="font-1-xxl cor-0">Pedale mais
+          tranquilo com
+          o nosso <span class="cor-p1 span">seguro.</span></h2>
+          <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+          <a href="../seguros.html" class="btn">CONHEÇA MAIS</a>
+      </div>
+    </div>
+  </article>
   <footer class="footer-bg">
     <div class="footer container">
       <img src="/uploads/img/bikcraft.svg" alt="Bikecraft">
