Adiciona ramificações do diretorio bicicletas

--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz@0,18..144;1,18..144&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="shortcut icon" href="../favicon.svg" type="html+xml">
-  <title>Nimbus | Bikecraft</title>
+  <title>Magic | Bikecraft</title>
 </head>
-<body id="nimbus">
+<body id="magic">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img src="../uploads/img/bikcraft.svg" alt="bikecraft">
@@ -30,19 +30,19 @@
   <main  class="titulo-bg">
     <div>
       <div class="titulo container ">
-        <p class="font-2-xl cor-5">R$ 4999</p>
-        <h1 class="font-1-xxl cor-0">Nimbus Stark<span class="cor-p1 span">.</span></h1>
+        <p class="font-2-xl cor-5">R$ 2499</p>
+        <h1 class="font-1-xxl cor-0">Magic Might<span class="cor-p1 span">.</span></h1>
       </div>
     </div>
 
       <div class="bicicleta container">
         <div class="bicicleta-imagens">
-          <img src="../uploads/img/fotos/bikes/nimbus-1.jpg" alt="">
           <img src="../uploads/img/fotos/bikes/magic-1.jpg" alt="">
+          <img src="../uploads/img/fotos/bikes/nimbus-1.jpg" alt="">
           <img src="../uploads/img/fotos/bikes/nebula-1.jpg" alt="">
         </div>
         <div class="bicicleta-conteudo">
-          <p class="font-2-xs  cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+          <p class="font-2-xs  cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <div class="bicicleta-comprar">
             <a href="../orcamento.html" class="btn">Comprar Agora</a>
             <span class="font-1-xs cor-6"><img src="../uploads/img/icons/entrega.svg" alt="">entrega em 5 dias</span>
@@ -101,10 +101,10 @@
 
     <ul >
       <li>
-        <a href="../bicicletas/magic.html" class="cor-11" >
-          <img src="../uploads/img/fotos/bikes/magic.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Magic Might</h3>
-          <span class="font-2-m cor-8">R$ 2499</span>
+        <a href="../bicicletas/nimbus.html" class="cor-11" >
+          <img src="../uploads/img/fotos/bikes/nimbus.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
       <li>
