adiiciona página de contato e seus estils iniciais

--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -15,7 +15,7 @@
 <body id="magic">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="../uploads/img/bikcraft.svg" alt="bikecraft">
+      <a href="../index.html"><img src="../uploads/img/bikcraft.svg" alt="bikecraft">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1m">
