--- a/contatos.html
+++ b/contatos.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="contato container">
-      <section aria-label="endereço" class="contato-dados">
+      <section aria-label="endereco" class="contato-dados">
         <h2 class="font-1-m cor-0">Loja Online</h2>
         <div class="contato-endereco font-2-s cor-4">
           <p>Rua Ali Perto, 35</p>
