--- a/contatos.html
+++ b/contatos.html
@@ -65,15 +65,15 @@
             <label for="telefone">Telefone</label>
             <input type="text" name="telefone" id="telefone" placeholder="(21) 9999-9999">
           </div>
-          <div>
-            <label for="email">Telefone</label>
-            <input type="email" name="email" id="email" placeholder="contato@email.com">
+          <div class="col-2">
+            <label for="email" >Email</label>
+            <input type="email" name="email" id="email" placeholder="contato@email.com" >
           </div>
-          <div>
-            <label for="mensagem">Mensagem</label>
+          <div class="col-2">
+            <label for="mensagem" >Mensagem</label>
             <textarea rows="5" name="mensagem" id="mensagem" ></textarea>
           </div>
-          <button class="btn">Enviar Mensagem</button>
+          <button class="btn col-2">Enviar Mensagem</button>
         </form>
       </section>
     </div>
