--- a/contatos.html
+++ b/contatos.html
@@ -78,6 +78,39 @@
       </section>
     </div>
   </main>
+  <article class="lojas container">
+    <h2 class="font-1-xxl">lojas locais <span class="cor-p1 span">.</span></h2>
+    <div class="lojas-item">
+      <img src="./uploads/img/lojas/rj.jpg" alt="mapa marcando o endereço">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Rio de Janeiro</h3>
+        <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>Rio de Janeiro - RJ</p>
+        </div>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:rio@bikcraft.com" class="font-2-s cor-8">rio@bikcraft.com</a>
+          <a href="tel:+55219999999" class="font-2-s cor-8"> 21 9999-9999</a>
+        </div>
+        <p class="lojas-tempo font-1-s"><img src="./uploads/img/icons/horario.svg" alt=""> 08-18h de seg à dom</p>
+      </div>
+    </div>
+    <div class="lojas-item">
+      <img src="./uploads/img/lojas/sp.jpg" alt="mapa marcando o endereço de sp">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Sao Paulo</h3>
+      <div class="lojas-dados font-2-s cor-8">
+        <p>Rua Ali Perto, 25</p>
+        <p>Sao Paulo - SP</p>
+      </div>
+      <div class="lojas-dados font-2-s cor-8">
+        <a href="mailto:sp@bikcraft.com" class="font-2-s cor-8">sp@bikcraft.com</a>
+        <a href="tel:+55219999999" class="font-2-s cor-8"> 11 9999-9999</a>
+      </div>
+      <p class="lojas-tempo font-1-s"><img src="./uploads/img/icons/horario.svg" alt=""> 08-18h de seg à dom</p>
+     </div>
+    </div>
+  </article>
 
   <footer class="footer-bg">
     <div class="footer container">
