--- a/orcamento.html
+++ b/orcamento.html
@@ -45,11 +45,62 @@
         <label for="seguro">Seguro</label>
 
         <div class="orcamento-conteudo" id="orcamento-bikecraft">
-          <h2 class="font-1-l cor-0">Escolha a sua (Bikecraft)</h2>
+          <h2 class="font-1-xs cor-5">Escolha a sua</h2>
+
+          <input type="radio" name="produto" value="nimbus" id="nimbus">
+          <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li> <img src="./uploads/img/icons/eletrica.svg" alt="">Motor Elétrico</li>
+              <li> <img src="./uploads/img/icons/carbono.svg" alt="">Fibra de Carbono</li>
+              <li> <img src="./uploads/img/icons/velocidade.svg" alt="">40 kmh</li>
+              <li> <img src="./uploads/img/icons/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./uploads/img/fotos/bikes/nimbus.jpg" alt="Bicicleta-Preta">
+
+          </div>
+
+          <input type="radio" name="produto" value="magic" id="magic">
+          <label for="magic">Magic Might  <span>R$ 2499</span></label>
+
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li> <img src="./uploads/img/icons/eletrica.svg" alt="">Motor Elétrico</li>
+              <li> <img src="./uploads/img/icons/carbono.svg" alt="">Fibra de Carbono</li>
+              <li> <img src="./uploads/img/icons/velocidade.svg" alt="">45 kmh</li>
+              <li> <img src="./uploads/img/icons/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./uploads/img/fotos/bikes/magic.jpg" alt="Bicicleta-Preta">
+
+          </div>
+
+          <input type="radio" name="produto" value="nebula" id="nebula">
+          <label for="nebula">Nebula Cosmic  <span>R$ 3999</span></label>
+
+
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li> <img src="./uploads/img/icons/eletrica.svg" alt="">Motor Elétrico</li>
+              <li> <img src="./uploads/img/icons/carbono.svg" alt="">Fibra de Carbono</li>
+              <li> <img src="./uploads/img/icons/velocidade.svg" alt="">50 kmh</li>
+              <li> <img src="./uploads/img/icons/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./uploads/img/fotos/bikes/nebula.jpg" alt="Bicicleta-Preta">
+
+          </div>
+
         </div>
 
         <div class="orcamento-conteudo" id="orcamento-seguro">
-          <h2 class="font-1-l cor-0">Escolha o plano</h2>
+          <h2 class="font-1-xs cor-5">Escolha o plano</h2>
+
+          <input type="radio" name="produto" value="prata" id="prata">
+          <label for="prata">Prata<span>R$ 199</span></label>
+
+          <input type="radio" name="produto" value="ouro" id="ouro">
+          <label for="ouro">Ouro<span>R$ 299</span></label>
+
         </div>
 
       </div>
