Adiciona interações iniciais com javascript

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz@0,18..144;1,18..144&display=swap" rel="stylesheet">
+  <link rel="preload" href="/css/style.css" as="style">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="shortcut icon" href="favicon.svg" type="html+xml">
+ 
   <title>Bikecraft- Bicicleas Elétricas</title>
 </head>
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="../"><img src="./uploads/img/bikcraft.svg" alt="bikecraft">
+      <a href="../"><img src="./uploads/img/bikcraft.svg" alt="bikecraft" width="136" height="32">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1m">
@@ -34,7 +36,7 @@
         <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href="./bicicletas.html" class="btn">Escolha a sua</a>
       </div>
-        <img src="/uploads/img/fotos/img-intro.jpg" alt="Bicicleta elétrica preta">
+        <img src="/uploads/img/fotos/img-intro.jpg" alt="Bicicleta elétrica preta" width="1280" height="1600">
       </div>
   </main>
   <article class="bicicletas-lista">
@@ -85,7 +87,7 @@
       </div>
     </div>
       <div class="tecnologia-imagem">
-        <img src="/uploads/img/fotos/diferencial.jpg" alt="">
+        <img src="/uploads/img/fotos/diferencial.jpg" alt="" width="1280" height="1920">
       </div>
   </div>
 </article>
@@ -105,7 +107,7 @@
 </section>
 <section class="depoimento" aria-label="depoimento">
   <div>
-    <img src="/uploads/img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta">
+    <img src="/uploads/img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta" width="1560" height="13600">
   </div>
    <div class="depoimento-conteudo">
     <blockquote class="font-1-xl cor-p5"> 
@@ -177,5 +179,8 @@
   </div>
 
 </footer>
+
+
+<script src="./js/script.js"></script>
 </body>
 </html>
