--- a/seguros.html
+++ b/seguros.html
@@ -45,7 +45,7 @@
         <li>Suporte 08h às 18h</li>
         <li>Cobertura estadual</li>
       </ul>
-      <a href="./orcamento.html" class="btn sec">Inscreva-se</a>
+      <a href="./orcamento.html?tipo=seguro&produto=prata" class="btn sec">Inscreva-se</a>
     </div>
     <div class="seguros-item">
       <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -58,7 +58,7 @@
         <li>Desconto em parceiros</li>
         <li>Acesso ao Clube Bikcraft</li>
       </ul>
-      <a href="./orcamento.html" class="btn">Inscreva-se</a>
+      <a href="./orcamento.html?tipo=seguro&produto=ouro" class="btn">Inscreva-se</a>
     </div>
   </div>
   </main>
@@ -167,5 +167,6 @@
      </div>
   
       </footer>
-    </body>
+    <script src="./js/script.js"></script>
+</body>
   </html>
