--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -44,7 +44,7 @@
         <div class="bicicleta-conteudo">
           <p class="font-2-xs  cor-5">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <div class="bicicleta-comprar">
-            <a href="../orcamento.html" class="btn">Comprar Agora</a>
+            <a href="../orcamento.html?tipo=bikecraft&produto=nebula" class="btn">Comprar Agora</a>
             <span class="font-1-xs cor-6"><img src="../uploads/img/icons/entrega.svg" alt="">entrega em 5 dias</span>
             <span class="font-1-xs cor-6"><img src="../uploads/img/icons/estoque.svg" alt="">estoque</span>
           </div>
@@ -164,5 +164,6 @@
      </div>
   
       </footer>
-    </body>
+    <script src="../js/script.js"></script>
+</body>
   </html>
