--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </div>
   </header>
 
-  <main class="introducao-bg">
+  <main class="introducao-bg" >
     <div class="introducao container">
       <div class="introducao-conteudo">
-        <h1 class="font-1-xxl">Bicicletas feitas sob medida<span class="cor-p1 span">.</span></h1>
-        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a href="./bicicletas.html" class="btn">Escolha a sua</a>
-      </div>
-        <img src="/uploads/img/fotos/img-intro.jpg" alt="Bicicleta elétrica preta" width="1280" height="1600">
+        <h1 class="font-1-xxl fadeInDown"  data-anime="200">Bicicletas feitas sob medida<span class="cor-p1 span">.</span></h1>
+        <p class="font-2-l cor-5 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicicletas.html" class="btn" data-anime="600">Escolha a sua</a>
+      </div >
+        <img data-anime="800" src="/uploads/img/fotos/img-intro.jpg" alt="Bicicleta elétrica preta" width="1280" height="1600" class="fadeInDown">
       </div>
   </main>
   <article class="bicicletas-lista">
@@ -180,7 +180,7 @@
 
 </footer>
 
-
+<script src="./js/plugins/simple-anime.js"></script>
 <script src="./js/script.js"></script>
 </body>
 </html>
