--- a/bicicletas.html
+++ b/bicicletas.html
@@ -8,9 +8,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz@0,18..144;1,18..144&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.min.css">
   <link rel="shortcut icon" href="favicon.svg" type="html+xml">
   <title>Bicicletas | Bikecraft</title>
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 <body id="bicicletas">
   <header class="header-bg">
