--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz@0,18..144;1,18..144&display=swap" rel="stylesheet">
-  <link rel="preload" href="/css/style.css" as="style">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="shortcut icon" href="favicon.svg" type="html+xml">
+  <link rel="preload" href="/css/style.min.css" as="style">
+  <link rel="stylesheet" href="/css/style.min.css">
+  <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
  
   <title>Bikecraft- Bicicleas Elétricas</title>
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 <body>
   <header class="header-bg">
